--- a/src/main.css
+++ b/src/main.css
@@ -4,12 +4,21 @@
     --color-background: #141414;
     --color-font: #fff;
     --color-font-hover: #e5e5e5;
+    --color-hero-play-button: #fff;
+    --color-hero-play-button-hover: #e5e5e5;
+    --color-hero-details-button:  rgba(110, 110, 110, 0.7);
+    --color-hero-details-button-hover: rgba(80, 80, 80, 0.8);
 
     /* Typography */
     --font-size-navigation: 14px;
     --font-weight-navigation: 300;
 
     --font-size-hero: 1.2vw;
+    --font-size-hero-button-icon: 2vw;
+    --font-weight-hero-button-icon: 500;
+    --font-size-hero-button-text: 1.2vw;
+    --font-weight-hero-button-text: 350;
+    
     --font-size-category: 1.4vw;
     --font-size-footer-link: 13px;
     --font-size-footer-copyright: 11px;
@@ -39,8 +48,19 @@
     --height-secondary-navigation-notification: 32px;
     --width-secondary-navigation-profile: 32px;
     --height-secondary-navigation-profile: 32px;
-    
-    
+
+    --width-hero: 1440px;
+    --height-hero: 810px;
+    --padding-hero-content: 57.5px;
+    --gap-hero-content: 5px;
+    --hero-poster-width: 600px;
+    --hero-description-width: 500px;
+    --width-hero-button-container: 250px;
+    --height-hero-button-container: 40px;
+    --gap-hero-button: 10px;
+    --width-hero-play-button: 100px;
+    --width-hero-details-button: 130px;
+
     --width-category-card: 224px;
     --height-category-card: 126px;
     --width-rank-card: 110px;
@@ -70,14 +90,29 @@ body {
 .header {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
     
-    width: var(--width-background);
+    width: 100%;
     height: var(--height-header);
     margin: 0;
     padding-left: var(--padding-header);
     padding-right: var(--padding-header);
+
+    box-sizing: border-box;
+
+    background-color: var(--color-background);
+}
+
+.header-left, .header-right {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    
+    width: auto;
+    height: 100%;
+    margin: 0;
 
     background-color: var(--color-background);
 }
@@ -107,7 +142,7 @@ body {
     justify-content: flex-start;
     align-items: center;
     
-    width: var(--width-primary-navigation);
+    width: auto;
     height: var(--height-primary-navigation);
     margin: 0;
     padding: 0;
@@ -118,7 +153,7 @@ body {
     justify-content: right;
     align-items: center;
     
-    height: var(--height-primary-navigation-item);
+    height: 100%;
     margin-left: var(--margin-primary-navigation-item-left);
 }
 
@@ -142,10 +177,9 @@ body {
     justify-content: center;
     align-items: center;
     
-    width: var(--width-secondary-navigation);
-    height: var(--height-secondary-navigation);
+    width: auto;
+    height: 100%;
     margin: 0;
-    margin-left: auto;
     padding: 0;
 }
 
@@ -154,7 +188,7 @@ body {
     justify-content: left;
     align-items: center;
     
-    height: var(--height-secondary-navigation-item);
+    height: 100%;
     margin-right: var(--margin-secondary-navigation-item-right);
 }
 
@@ -163,10 +197,10 @@ body {
     justify-content: center;
     align-items: center;
 
+    padding: 0;
+
     background-color: transparent;
     border: none;
-
-    padding: 0;
 
     cursor: pointer;
 }
@@ -186,4 +220,143 @@ body {
     height: var(--height-secondary-navigation-profile);
 
     border-radius: 10%;
+}
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    position: relative;
+    
+    width: var(--width-hero);
+    height: var(--height-hero);
+    margin: 0;
+}
+
+.poster {
+    position: absolute;
+    z-index: 1;
+
+    width: 100%;
+    height: 100%;
+}
+
+.overlay {
+    position: absolute;
+    z-index: 2;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0, 0, 0, 0.25);
+}
+
+.hero-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    position: absolute;
+    z-index: 3;
+
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    gap: var(--gap-hero-content);
+    padding-left: var(--padding-hero-content);
+    box-sizing: border-box;
+}
+
+.hero-title {
+    width: var(--hero-poster-width);
+    height: auto;
+}
+
+.hero-description {
+    width: var(--hero-poster-width);
+    height: auto;
+
+    font-size: var(--font-size-hero);
+    color: var(--color-font);
+}
+
+.hero-button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    
+    width: var(--width-hero-button-container);
+    height: var(--height-hero-button-container);
+    margin: 0;
+    /* gap: var(--gap-hero-button-container); */
+}
+
+.play-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+    width: var(--width-hero-play-button);
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    gap: var(--gap-hero-button);
+    border: none;
+
+    background-color: var(--color-hero-play-button);
+    border-radius: 10%;
+
+    cursor: pointer;
+}
+
+.play-button:hover {
+    background-color: var(--color-hero-play-button-hover);
+}
+
+.play-button-icon {
+    font-size: var(--font-size-hero-button-icon);
+    font-weight: var(--font-weight-hero-button-icon);
+}
+
+.play-button-text {
+    font-size: var(--font-size-hero-button-text);
+    font-weight: var(--font-weight-hero-button-text);
+}
+
+.details-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+    width: var(--width-hero-details-button);
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    gap: var(--gap-hero-button);
+    border: none;
+
+    color: var(--color-font);
+
+    background-color: var(--color-hero-details-button);
+    border-radius: 10%;
+
+    cursor: pointer;
+}
+
+.details-button:hover {
+    background-color: var(--color-hero-details-button-hover);
+}
+
+.details-button-icon {
+    font-size: var(--font-size-hero-button-icon);
+    font-weight: var(--font-weight-hero-button-icon);
+}
+
+.details-button-text {
+    font-size: var(--font-size-hero-button-text);
+    font-weight: var(--font-weight-hero-button-text);
 }
