--- a/src/main.css
+++ b/src/main.css
@@ -4,10 +4,14 @@
     --color-background: #141414;
     --color-font: #fff;
     --color-font-hover: #e5e5e5;
+
     --color-hero-play-button: #fff;
     --color-hero-play-button-hover: #e5e5e5;
     --color-hero-details-button:  rgba(110, 110, 110, 0.7);
     --color-hero-details-button-hover: rgba(80, 80, 80, 0.8);
+    
+    --color-font-rank-icon: #808080;
+    
     --color-font-footer: #808080;
 
     /* Typography */
@@ -21,6 +25,8 @@
     --font-weight-hero-button-text: 320;
     
     --font-size-category: 20px;
+
+
     --font-size-footer-link: 13px;
     --font-size-footer-copyright: 11px;
 
@@ -63,7 +69,7 @@
     --width-hero-play-button: 115px;
     --width-hero-details-button: 150px;
 
-    --padding-category: 57.5px;
+    --padding-content: 57.5px;
     --gap-category: 56px;
     --gap-category-section-container: 8px;
     --height-category-section-container: 158px;
@@ -72,15 +78,22 @@
     --gap-category-section-slider: 8px;
     --width-category-section-slider-item: 224px;
     --height-category-section-slider-item: 126px;
-    --width-rank-slider-item: 110px;
-    --height-rank-slider-item: 165px;
     --margin-top-upper-category: -100px;
-    --width-category-section-slider-inner-item: 275px;
-    --height-category-section-slider-inner-item: 250px;
-    --width-category-button: 30px;
-    --height-category-button: 30px;
-    --padding-category-section-slider-inner-item-canvas: 16px;
+    --width-slider-inner-item: 270px;
+    --height-slider-inner-item: 270px;
+    --width-content-button: 30px;
+    --height-content-button: 30px;
+    --padding-slider-inner-item-canvas: 16px;
     --gap-button-container: 8px;
+
+    --gap-rank: 80px;
+    --gap-category-section-container: 8px;
+    --height-rank-section-container: 197px;
+    --width-rank-section-slider-item: 220px;
+    --height-rank-section-slider-item: 165px;
+    --height-rank-section-slider-item-icon: 165px;
+    --width-rank-section-slider-item-img: 110px;
+    --height-rank-section-slider-item-img: 165px;
 
     --padding-footer: 240px;
     --margin-top-footer: 160px;
@@ -117,6 +130,9 @@ body {
     background-color: var(--color-background);
 }
 
+/* ================================================================= */
+/* Header */
+/* ================================================================= */
 .header {
     display: flex;
     flex-direction: row;
@@ -252,6 +268,9 @@ body {
     border-radius: 10%;
 }
 
+/* ================================================================= */
+/* Hero */
+/* ================================================================= */
 .hero {
     display: flex;
     flex-direction: column;
@@ -322,7 +341,7 @@ body {
     margin: 0;
 }
 
-.play-button {
+.hero-play-button {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -341,21 +360,21 @@ body {
     cursor: pointer;
 }
 
-.play-button:hover {
+.hero-play-button:hover {
     background-color: var(--color-hero-play-button-hover);
 }
 
-.play-button-icon {
+.hero-play-button-icon {
     font-size: var(--font-size-hero-button-icon);
     font-weight: var(--font-weight-hero-button-icon);
 }
 
-.play-button-text {
+.hero-play-button-text {
     font-size: var(--font-size-hero-button-text);
     font-weight: var(--font-weight-hero-button-text);
 }
 
-.details-button {
+.hero-details-button {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -376,20 +395,23 @@ body {
     cursor: pointer;
 }
 
-.details-button:hover {
+.hero-details-button:hover {
     background-color: var(--color-hero-details-button-hover);
 }
 
-.details-button-icon {
+.hero-details-button-icon {
     font-size: var(--font-size-hero-button-icon);
     font-weight: var(--font-weight-hero-button-icon);
 }
 
-.details-button-text {
+.hero-details-button-text {
     font-size: var(--font-size-hero-button-text);
     font-weight: var(--font-weight-hero-button-text);
 }
 
+/* ================================================================= */
+/* Category */
+/* ================================================================= */
 .upper-category, .lower-category {
     display: flex;
     flex-direction: column;
@@ -399,14 +421,15 @@ body {
     width: 100%;
     height: auto;
     margin: 0;
-    padding-left: var(--padding-category);
+    padding-left: var(--padding-content);
     gap: var(--gap-category);
     
     box-sizing: border-box;
 }
 
 .lower-category {
-    padding-top: var(--padding-category);
+    padding-top: var(--padding-content);
+    z-index: 4;
 }
 
 .upper-category {
@@ -469,7 +492,7 @@ body {
 }
 
 .category-section-slider-item:hover {
-    z-index: 10;
+    z-index: 5;
 }
 
 .category-section-slider-item img{
@@ -479,46 +502,155 @@ body {
     border-radius: 5%;
 }
 
-.category-section-slider-inner-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: absolute; 
-    top: -75%;
-    left: 0;
-
-
-    width: var(--width-category-section-slider-inner-item);
-    height: var(--height-category-section-slider-inner-item);
-    border-radius: 5%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    box-sizing: border-box;
-    
-
-    opacity: 0;
-    visibility: hidden;
-    overflow: hidden;
-}
-
-.category-section-slider-inner-item img{
-    width: var(--width-category-section-slider-inner-item);
-    height: auto;
-}
-
-.category-section-slider-item:hover .category-section-slider-inner-item {
+.category-section-slider-item:hover .slider-inner-item {
     opacity: 1;
     visibility: visible;
 }
 
-.category-section-slider-inner-item-canvas {
+/* ================================================================= */
+/* Rank */
+/* ================================================================= */
+.rank {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    
+    width: 100%;
+    height: auto;
+    margin: 0;
+    padding-top: var(--padding-content);
+    padding-bottom: var(--padding-content);
+    padding-left: var(--padding-content);
+    gap: var(--gap-rank);
+    
+    box-sizing: border-box;
+}
+
+.rank-section-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    
+    width: 100%;
+    height: var(--height-category-section-container);
+    margin: 0;
+    padding: 0;
+    gap: var(--gap-category-section-container); 
+    box-sizing: border-box;   
+}
+
+.rank-section-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    
+    width: 100%;
+    height: var(--height-category-section-header);
+    margin: 0;
+    padding: 0;
+    font-size: var(--font-size-hero-button-text);
+    font-weight: var(--font-weight-hero-button-text);
+
+    color: var(--color-font);
+    font-size: var(--font-size-category);
+}
+
+.rank-section-slider {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    
+    width: 100%;
+    height: var(--height-category-rank-slider);
+    margin: 0;
+    padding: 0;
+    gap: var(--gap-category-section-slider);
+}
+
+.rank-section-slider-item {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    
+    width: var(--width-rank-section-slider-item);
+    height: var(--height-rank-section-slider-item);
+
+    cursor: pointer;
+}
+
+.rank-section-slider-item:hover {
+    z-index: 5;
+}
+
+.rank-section-slider-item-icon {
+    width: auto;
+    height: 100%;
+}
+
+.rank-section-slider-item-img {
+    width: auto;
+    height: 100%;
+
+    border-radius: 5%;
+}
+
+.rank-section-slider-item:hover .slider-inner-item {
+    opacity: 1;
+    visibility: visible;
+}
+
+/* ================================================================= */
+/* Content-Common */
+/* ================================================================= */
+.slider-inner-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+/*     
+    top: -50%;
+    left: 0; */
+
+    width: var(--width-slider-inner-item);
+    height: var(--height-slider-inner-item);
+    margin: 0;
+    padding: 0;
+    border-radius: 5%;
+    box-shadow: 0 0 20px rgba(50, 50, 50, 0.5);
+    box-sizing: border-box;
+    
+    opacity: 0;
+    visibility: hidden;
+    overflow: hidden;
+    z-index: 10;
+}
+
+.slider-inner-item img{
+    width: var(--width-slider-inner-item);
+    height: auto;
+    border-radius: 0;
+}
+
+.slider-inner-item-canvas {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
 
-    width: var(--width-category-section-slider-inner-item);
+    width: var(--width-slider-inner-item);
     height: auto;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     
     background-color: var(--color-background);
@@ -530,12 +662,13 @@ body {
     justify-content: space-between;
     align-items: flex-start;
 
-    width: var(--width-category-section-slider-inner-item);
+    width: var(--width-slider-inner-item);
     height: auto;
-
-    padding-top: var(--padding-category-section-slider-inner-item-canvas);
-    padding-left: var(--padding-category-section-slider-inner-item-canvas);
-    padding-right: var(--padding-category-section-slider-inner-item-canvas);
+    margin: 0;
+    padding: 0;
+    padding-top: var(--padding-slider-inner-item-canvas);
+    padding-left: var(--padding-slider-inner-item-canvas);
+    padding-right: var(--padding-slider-inner-item-canvas);
     box-sizing: border-box; 
 }
 
@@ -546,8 +679,10 @@ body {
     align-items: center;
 
     width: auto;
-    height: var(--height-category-button);
+    height: var(--height-content-button);
     gap: var(--gap-button-container);
+    margin: 0;
+    padding: 0;
 }
 
 .right-button-container {
@@ -557,17 +692,19 @@ body {
     align-items: center;
 
     width: auto;
-    height: var(--height-category-button);
+    height: var(--height-content-button);
+    margin: 0;
+    padding: 0;
 }
 
-.category-play-button, .category-add-button, 
-.category-like-button, .category-dropdown-button {
+.content-play-button, .content-add-button, 
+.content-like-button, .content-dropdown-button {
     display: flex;
     justify-content: center;
     align-items: center;
 
-    width: var(--width-category-button);
-    height: var(--width-category-button);
+    width: var(--width-content-button);
+    height: var(--width-content-button);
     padding: 0;
 
     background-color: transparent;
@@ -576,17 +713,20 @@ body {
     cursor: pointer;
 }
 
-.category-play-button img, .category-add-button img, 
-.category-like-button img, .category-dropdown-button img {
+.content-play-button img, .content-add-button img, 
+.content-like-button img, .content-dropdown-button img {
     width: 100%;
     height: 100%;
 }
 
-.category-section-slider-inner-item-description {
-    padding-left: var(--padding-category-section-slider-inner-item-canvas);
+.slider-inner-item-description {
+    padding-left: var(--padding-slider-inner-item-canvas);
     color: var(--color-font);
 }
 
+/* ================================================================= */
+/* Footer */
+/* ================================================================= */
 .footer {
     display: flex;
     flex-direction: column;
