--- a/src/content/hero/hero.css
+++ b/src/content/hero/hero.css
@@ -7,6 +7,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     position: relative;
+    top: -68px;
     
     width: var(--width-hero);
     height: var(--height-hero);
@@ -16,7 +17,7 @@
 
 .poster {
     position: absolute;
-    z-index: 1;
+    /* z-index: 1; */
 
     width: 100%;
     height: 100%;
@@ -24,7 +25,7 @@
 
 .overlay {
     position: absolute;
-    z-index: 2;
+    /* z-index: 2; */
 
     width: 100%;
     height: 100%;
@@ -38,7 +39,7 @@
     justify-content: center;
     align-items: flex-start;
     position: absolute;
-    z-index: 3;
+    /* z-index: 3; */
 
     width: 100%;
     height: 100%;
